--- a/Css/profile.css
+++ b/Css/profile.css
@@ -128,9 +128,12 @@ nav{
     box-shadow:0px 2px 8px 0px;
 }
 .profile-dropdown-btn span{
-    margin:0 0.5rem;
+    margin:0 0,0rem;
     margin-right: 0;
     color: #FFF;
+}
+.perfilSpan{
+    margin-left: 30px;
 }
 .profile-dropdown-list hr{
     border: 0.5px solid white;
@@ -175,10 +178,7 @@ nav{
     align-items: center;
     flex-direction: column;
 }
-.corpo h1{
 
-    }
-  
 
 .bot {
     height: 50px;
@@ -201,7 +201,7 @@ nav{
     width: 50%;
     height: 400px;
     border: 2px dashed orangered;
-    background-color: lightgreen;
+    background-color:transparent;
 }
 .blk2 {
     text-align: center;
@@ -209,7 +209,7 @@ nav{
     width: 50%;
     height: 400px;
     border: 2px dashed orangered;
-    background-color: rgb(233, 144, 238);
+    background-color: red;
 }
 .blk3 {
     text-align: center;
@@ -231,4 +231,35 @@ nav{
     gap: 150px;
     display: none;
     justify-content: center;
+}
+
+table.tabela {
+    width: 100%;
+    border-collapse: collapse;
+    background-color: #fff; /* Cor de fundo da tabela */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra suave */
+    border-radius: 8px; /* Cantos arredondados */
+}
+
+/* Estilo para as linhas da tabela (tr) */
+table.tabela tr {
+    border-bottom: 1px solid #ddd; /* Linha divisória entre as linhas */
+}
+
+/* Estilo para as células da tabela (td) */
+table.tabela td {
+    padding: 10px;
+    text-align: center;
+}
+
+/* Estilo para a primeira linha (cabeçalho) */
+table.tabela tr:first-child {
+    background-color: #053956; /* Cor de fundo do cabeçalho */
+    font-weight: bold;
+}
+
+/* Estilo para células do cabeçalho */
+table.tabela tr:first-child td {
+    color:white;
+    background-color: var(--color-neutral-0);
 }
