--- a/Css/indexsgds.css
+++ b/Css/indexsgds.css
@@ -88,7 +88,7 @@ nav ul li a{
 }
 
 .meio{
-    background-image: url(../img/jovem-medico-bonito-em-uma-tunica-medica-com-estetoscopio.jpg);
+    background-image: url(../img/index.jpg);
     background-repeat: no-repeat;
     background-size:cover;
     background-position:center center;
